# Subscription_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
database/: __init__.py  db.py  models.py
handlers/: __init__.py  admin.py  user.py
services/: __init__.py  scheduler.py  subscription.py
utils/: __init__.py  helpers.py  messages.py
